# timefirst-gr-solver

./: .gitignore  README.md  debug_ic_comparison.py  debug_vaidya_error.py  pyproject.toml  requirements.txt  test_dt_convergence.py  test_error_source.py  test_fair_comparison.py  test_iteration_tightness.py  test_unified_comparison.py
tests/: test_constraint_residuals.py  test_energy_accounting.py  test_flux_units_and_sign.py  test_manufactured_solution.py  test_shared_evolution.py  test_solver.py  test_vaidya_cross_gauge.py
timefirst_gr/: __init__.py  matter.py  solver.py  standard_evolution.py  standard_ref.py  validation.py
timefirst_gr/benchmarks/: bench_runtime.py  fair_comparison.py
timefirst_gr/examples/: compare_time.py
